# function-calling-test-suite

./: .gitignore  README.md  benchmark_report.html  benchmark_report.xml  claude-3-haiku-20240307_benchmark_report.html  claude-3-haiku-20240307_no_system_prompt_benchmark_report.html  gemini-pro_benchmark_report.html  gemini-pro_no_system_prompt_benchmark_report.html  gpt-3.5-turbo-0125_benchmark_report.html  gpt-3.5-turbo-0125_no_system_prompt_benchmark_report.html  gpt-4-turbo-preview_benchmark_report.html  mistral-large-latest_benchmark_report.html  mistral-large-latest_no_system_prompt_benchmark_report.html  pyproject.toml  test.sh  test_results.csv
benchmark/: __init__.py  benchmark.py  plot_results.py
function_benchmark/: __init__.py  function_benchmark.py  plot_results.py
function_calling_test_suite/: __init__.py
reports/: aggregate_summary.csv
specs/: 01_basic.json  01_basic.yaml  02_basic_negative.json  02_basic_negative.yaml  02_sequenced.json  03_chained.json  03_sequenced.json  03_sequenced.yaml  04_sequenced_negative.json  04_sequenced_negative.yaml  05_chained.json  05_chained.yaml  06_chained_negative.json  06_chained_negative.yaml  07_nested.json  07_semantic.json  07_semantic.yaml  07_semantic_negative.json  08_nested_negative.json  08_semantic_negative.json  08_semantic_negative.yaml  09_concurrent.json
tests/: conftest.py  test_benchmark.py  test_model.py
tests/baseline/: 01_basic.json  02_sequenced.json  03_chained.json  04_nested.json
