[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Nick Hale <nick@acorn.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
jsonschema = "^4.21.1"
requests = "^2.31.0"
openai = "^1.16.1"
pydantic = "2.6.4"
pytest-html = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
generate_report_on_test = true
addopts = "--tb=short --junitxml=benchmark_report.xml --html=benchmark_report.html --self-contained-html"  # Path for the generated JUnit report
