[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Nick Hale <nick@acorn.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
jsonschema = "^4.21.1"
requests = "^2.31.0"
openai = "^1.16.1"
pydantic = "2.6.4"
pytest-html = "^4.1.1"
pytest-json-report = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
generate_report_on_test = true
addopts = "-s --cache-clear -n auto --tb=short --self-contained-html --html=benchmark_report.html --json-report --json-report-file=benchmark_report.json --json-report-indent=4"
